[gd_scene load_steps=9 format=3 uid="uid://el6o5uk15g2c"]

[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://bqpxqjfn2qt1g" path="res://gdre_main.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://drxn4ollkvprv" path="res://gdre_icons/gdre_Logo.svg" id="3_bc0t5"]
[ext_resource type="Texture2D" uid="uid://bp8yf7a2dd6nu" path="res://gdre_icons/gdre_Pack.svg" id="4_nesr8"]
[ext_resource type="Texture2D" uid="uid://b3l2iqhf34x5c" path="res://gdre_icons/gdre_LogoBig.svg" id="4_vsto2"]
[ext_resource type="PackedScene" uid="uid://bvmc3vdlgqnse" path="res://gdre_new_pck.tscn" id="6_kct41"]
[ext_resource type="PackedScene" uid="uid://xdfd5b6mnjgr" path="res://gdre_patch_pck.tscn" id="7_ubmam"]

[sub_resource type="ButtonGroup" id="ButtonGroup_x51e8"]

[node name="root" type="GodotREEditorStandalone"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="SetEncryptionKeyWindow" type="Window" parent="."]
title = "Set Encryption Key"
position = Vector2i(144, 0)
size = Vector2i(800, 150)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="SetEncryptionKeyWindow"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 10.0
offset_right = 324.0
offset_bottom = 103.0
grow_horizontal = 2

[node name="Label" type="Label" parent="SetEncryptionKeyWindow/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
text = "Set Encryption Key (64 char hex string...)"

[node name="KeyText" type="TextEdit" parent="SetEncryptionKeyWindow/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2
placeholder_text = "<e.g. 000102030405060708090A0B0C0D0E0F101112131415161718191A1B1C1D1E1F>"

[node name="Container" type="Container" parent="SetEncryptionKeyWindow/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SetEncryptionKeyWindow/VBoxContainer"]
layout_mode = 2

[node name="Container" type="Container" parent="SetEncryptionKeyWindow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 2.08165e-12)
layout_mode = 2

[node name="CancelButton" type="Button" parent="SetEncryptionKeyWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Container2" type="Container" parent="SetEncryptionKeyWindow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2

[node name="OK Button" type="Button" parent="SetEncryptionKeyWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "OK"

[node name="log_window" type="RichTextLabel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.470588, 0.45098, 0.45098, 1)
theme_override_constants/line_separation = 5
scroll_following = true
selection_enabled = true

[node name="menu_background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -40.0
grow_horizontal = 2

[node name="MenuContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 1152.0

[node name="REToolsMenu" type="MenuButton" parent="MenuContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_x51e8")
text = "RE Tools"
icon = ExtResource("3_bc0t5")
item_count = 7
popup/item_0/text = "Recover Project..."
popup/item_0/icon = ExtResource("3_bc0t5")
popup/item_0/id = 0
popup/item_1/text = "Set encryption key..."
popup/item_1/icon = ExtResource("3_bc0t5")
popup/item_1/id = 1
popup/item_2/id = 5
popup/item_2/separator = true
popup/item_3/text = "About Godot RE Tools..."
popup/item_3/icon = ExtResource("3_bc0t5")
popup/item_3/id = 2
popup/item_4/text = "Report a bug..."
popup/item_4/icon = ExtResource("3_bc0t5")
popup/item_4/id = 3
popup/item_5/id = 6
popup/item_5/separator = true
popup/item_6/text = "Quit"
popup/item_6/icon = ExtResource("3_bc0t5")
popup/item_6/id = 4

[node name="PCKMenu" type="MenuButton" parent="MenuContainer"]
layout_mode = 2
text = "PCK"
icon = ExtResource("4_nesr8")
item_count = 2
popup/item_0/text = "Create PCK archive from folder... "
popup/item_0/icon = ExtResource("4_nesr8")
popup/item_0/id = 0
popup/item_1/text = "Patch PCK archive..."
popup/item_1/icon = ExtResource("4_nesr8")
popup/item_1/id = 1

[node name="version_lbl" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = -30.768
offset_bottom = 0.232002
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
text = "$$$"
flat = true

[node name="LegalNoticeWindow" type="Window" parent="."]
title = "Important: Legal Notice"
position = Vector2i(0, 36)
size = Vector2i(650, 431)
visible = false

[node name="Label" type="Label" parent="LegalNoticeWindow"]
offset_left = 100.0
offset_top = 20.0
offset_right = 614.0
offset_bottom = 389.0
text = "Resources, binary code and source code might be protected by copyright and trademark laws. Before using this software make sure that decompilation is not prohibited by the applicable license agreement, permitted under applicable law or you obtained explicit permission from the copyright owner.

The authors and copyright holders of this software do neither encourage nor condone the use of this software, and disclaim any liability for use of the software in violation of applicable laws.

This software in an alpha stage. Please report any bugs to the GitHub repository
"
autowrap_mode = 3

[node name="OkButton" type="Button" parent="LegalNoticeWindow"]
offset_left = 277.0
offset_top = 378.0
offset_right = 368.0
offset_bottom = 411.0
text = "OK"

[node name="TextureRect" type="TextureRect" parent="LegalNoticeWindow"]
offset_left = 15.0
offset_top = 164.0
offset_right = 79.0
offset_bottom = 228.0
texture = ExtResource("4_vsto2")

[node name="GdreNewPck" parent="." instance=ExtResource("6_kct41")]
visible = false

[node name="GdrePatchPck" parent="." instance=ExtResource("7_ubmam")]
visible = false

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="SetEncryptionKeyWindow/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_setenc_key_cancel_pressed"]
[connection signal="pressed" from="SetEncryptionKeyWindow/VBoxContainer/HBoxContainer/OK Button" to="." method="_on_setenc_key_ok_pressed"]
[connection signal="about_to_popup" from="MenuContainer/REToolsMenu" to="." method="_menubutton_about_to_popup"]
[connection signal="theme_changed" from="MenuContainer/REToolsMenu" to="." method="_on_menu_btn_theme_changed"]
[connection signal="pressed" from="version_lbl" to="." method="_on_version_lbl_pressed"]
[connection signal="save_pck_requested" from="GdreNewPck" to="." method="_on_new_pck_selected"]
[connection signal="do_patch_pck" from="GdrePatchPck" to="." method="_on_gdre_patch_pck_do_patch_pck"]
